Fix: Turned off refreshing on ckeditor plugin Fix: Replace [ ] in reference with "" Add: User icon to 'contributors' Add: Information content tooltip Add: Modernizr Fix: Hovers on mobile OS

--- a/sites/all/themes/skeletome/css/skeletome2.css
+++ b/sites/all/themes/skeletome/css/skeletome2.css
@@ -1597,30 +1597,30 @@ a.section-segment {
     color: #333;
     /*text-decoration: underline;*/
 }
-    a.section-segment:hover {
+    .no-touch a.section-segment:hover {
         text-decoration: none !important;
         color: white;
         background-color: #0e90d2;
         border-bottom: 1px solid #0c689b;
     }
-    a.section-segment:hover span {
+    .no-touch a.section-segment:hover span {
         color: white;
     }
-    a.section-segment:active {
+    .no-touch a.section-segment:active {
         box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
         -moz-box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
         -webkit-box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05)
     }
 
-    a.section-segment:hover .icon-chevron-right,
-    a.section-segment:hover .icon-chevron-left,
-    a.section-segment:hover .icon-chevron-up,
-    a.section-segment:hover .icon-chevron-down,
-    a.section-segment:hover .icon-globe {
+    .no-touch a.section-segment:hover .icon-chevron-right,
+    .no-touch a.section-segment:hover .icon-chevron-left,
+    .no-touch a.section-segment:hover .icon-chevron-up,
+    .no-touch a.section-segment:hover .icon-chevron-down,
+    .no-touch a.section-segment:hover .icon-globe {
         display: none;
     }
 
-    a.section-segment:hover .icon-white {
+    .no-touch a.section-segment:hover .icon-white {
         display: inline-block;
         opacity: 1;
     }
@@ -1628,11 +1628,11 @@ a.section-segment {
 /* ================================================
 Progress Bar
 */
-a.section-segment:hover .progress {
+.no-touch a.section-segment:hover .progress {
     background-color: rgb(0, 79, 119);
     background-image: none;
 }
-a.section-segment:hover .progress .bar {
+.no-touch a.section-segment:hover .progress .bar {
     background-color: white;
     border: 1px solid white;
 }
